# LaBoltz

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  benchmarks.md
examples/: couette_flow.cpp  lid_driven_cavity.cpp  periodic_smoke.cpp  poiseuille_flow.cpp  taylor_green_vortex.cpp
gui/: laboltz_viewer.py
include/lbm/: boundary.hpp  collision.hpp  domain.hpp  equilibrium.hpp  geometry.hpp  initialization.hpp  lattice.hpp  macroscopic.hpp  output.hpp  population.hpp  solver_step.hpp  streaming.hpp  vtk.hpp
scripts/: build.ps1  run_gui.ps1
tests/: lbm_core_tests.cpp
